--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 
 services:
     nginx:
@@ -33,3 +32,7 @@ services:
             MYSQL_DATABASE: craft-store
             MYSQL_USER: admin
             MYSQL_PASSWORD: admin
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:8.15.3
+        ports:
+            -   9300:9200
