--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
         ports:
             - "8000:80"
         volumes:
-            - docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+            - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
             - .:/var/www/laravel
         depends_on:
             - php
             - mysql
     php:
         build:
-            context: docker/Dockerfiles
+            context: ./docker/Dockerfiles
             dockerfile: php.Dockerfile
         volumes:
             - .:/var/www/laravel
@@ -23,10 +23,10 @@ services:
         ports:
             -  3316:3306
         volumes:
-            - docker/db/data:/var/lib/mysql
-            - docker/logs:/var/log/mysql
-            - docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
-            - docker/db/sql:/docker-entrypoint-initdb.d
+            - ./docker/db/data:/var/lib/mysql
+            - ./docker/logs:/var/log/mysql
+            - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
+            - ./docker/db/sql:/docker-entrypoint-initdb.d
         environment:
             MYSQL_ROOT_PASSWORD: admin
             MYSQL_DATABASE: craft-store
